Redux Store + Basic Interations
* The codebase is still a mess, so bear with me.

+ Added a redux store to allow for complex communication across multiple components.

+ Connected the editor with the graph view, so users can now add nodes on the editor and update the graph accordingly.

+ Connected the graph controls with the graph view, so users can now step through the power iteration (which updates the color of the nodes based on the values of the current iteration's result vector) and reset the graph.

--- a/src/App/components/GraphView/GraphView.scss
+++ b/src/App/components/GraphView/GraphView.scss
@@ -12,4 +12,18 @@ div.graphView {
    div.node-info-bar, div.graph-controls-bar {
       height: $bar-height;
    }
+
+   div.graph-controls-bar {
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      border-radius: 0;
+   }
+
+   div.node-info-bar {
+      border-bottom: none;
+      border-left: none;
+      border-right: none;
+      border-radius: 0;
+   }
 }
