--- a/src/App/components/Editor/GraphNodes/NodeInputs.scss
+++ b/src/App/components/Editor/GraphNodes/NodeInputs.scss
@@ -9,6 +9,7 @@ div.node {
       line-height: 14px;
       padding-top: 4px;
       padding-bottom: 4px;
+      font-family: 'Fira Code', monospace;
    }
 
    margin-bottom: 4px;
