Dynamic Theme + Logo
+ Added the necessary logic to allow the user to change the theme of the application. Also provided an "auto" option which will allow the website to change themes based on the system's preferred theme.

+ Create a nice, simple, and beautiful logo for the app.

+ Rearranged some code, and made other general improvements.

--- a/src/App/components/RVector/RVector.scss
+++ b/src/App/components/RVector/RVector.scss
@@ -65,6 +65,7 @@ div.vector-super-wrapper {
 
                &.vector-symbol-cell {
                   height: fit-content;
+                  pointer-events: none;
 
                   div.cell-value {
                      height: 32px;
