--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -7,6 +7,7 @@ div.App {
    width: 100%;
    padding-top: 48px;
    height: 100vh;
+   height: calc(var(--vh, 1vh) * 100);
 
    @include flex(flex-start, row);
 
