--- a/src/App/components/GraphView/GraphView.scss
+++ b/src/App/components/GraphView/GraphView.scss
@@ -2,15 +2,22 @@
 $bar-height: 48px;
 
 div.graphView {
-   div.graphContainer {
-      // background: #eee;
-      // background: #bcbec4;
+   height: 100%;
+
+   div.graph-container {
       width: 100%;
-      height: calc(100% - #{2 * $bar-height});
+      height: 100%;
+      flex-grow: 1;
+
+      > div {
+         width: 100% !important;
+         height: 100% !important;
+      }
    }
 
    div.node-info-bar, div.graph-controls-bar {
       height: $bar-height;
+      flex-shrink: 0;
    }
 
    div.graph-controls-bar {
