Fixed GraphControls Major Interactivity
Among other things, all the interactivity related to the graph controls are now fully functional (except for the "View Matrices" button).

--- a/src/App/components/GraphView/GraphControls/GraphControls.scss
+++ b/src/App/components/GraphView/GraphControls/GraphControls.scss
@@ -1,21 +1,64 @@
-
 div.graph-controls {
    height: 100%;
 
    div.power-icons {
-      button {
-         margin-right: 12px;
+      button.next-step-button {
+         margin-left: 12px;
+      }
+
+      @media screen and (max-width: 965px) {
+         .reset-graph-layout-main-button {
+            display: none;
+         }
+      }
+
+      .no-desktop {
+         display: none;
       }
 
       @media screen and (max-width: 375px) {
          .no-xs-screen {
             display: none;
          }
+
+         .no-desktop {
+            display: unset;
+         }
+      }
+   }
+
+   div.iteration-progress-bar {
+      flex-shrink: 0;
+      border-top: none;
+      border-left: none;
+      border-right: none;
+      border-radius: 0;
+
+      padding: 0 16px;
+      font-size: 14px;
+
+      > span {
+         opacity: 0.5;
       }
 
-      @media screen and (min-width: 375px) {
-         .no-desktop {
+      span.bar {
+         opacity: 1;
+         width: 100px;
+         margin: 8px;
+         border-radius: 50px;
+      }
+
+      span.slash {
+         display: none;
+      }
+
+      @media screen and (max-width: 475px) {
+         span.bar {
             display: none;
+         }
+
+         span.slash {
+            display: inline-block;
          }
       }
    }
@@ -26,7 +69,7 @@ div.graph-controls {
             margin-left: 12px;
          }
 
-         @media screen and (max-width: 650px) {
+         @media screen and (max-width: 965px) {
             display: none;
          }
       }
@@ -34,7 +77,7 @@ div.graph-controls {
       div.menu-buttons {
          display: none;
 
-         @media screen and (max-width: 650px) {
+         @media screen and (max-width: 965px) {
             display: block;
          }
       }
