--- a/src/App/components/GraphView/GraphView.scss
+++ b/src/App/components/GraphView/GraphView.scss
@@ -1,4 +1,3 @@
-
 $bar-height: 48px;
 
 div.graphView {
@@ -15,7 +14,8 @@ div.graphView {
       }
    }
 
-   div.node-info-bar, div.graph-controls-bar {
+   div.node-info-bar,
+   div.graph-controls-bar {
       height: $bar-height;
       flex-shrink: 0;
    }
