--- a/src/App/components/GraphView/NodeInfo/NodeInfo.scss
+++ b/src/App/components/GraphView/NodeInfo/NodeInfo.scss
@@ -1,4 +1,10 @@
 
+div.select-node {
+   height: 100%;
+   opacity: 0.7;
+   font-size: 14px;
+}
+
 div.node-info {
    height: 100%;
    font-family: 'Fira Code', monospace;
