Initial Version of "View Matrices" Section
Added the initial version of the section which displays the matrices used in the PageRank algorithm.

--- a/src/App/components/GraphView/GraphView.scss
+++ b/src/App/components/GraphView/GraphView.scss
@@ -1,18 +1,9 @@
+@import "../../../helper.scss";
+
 $bar-height: 48px;
 
 div.graphView {
    height: 100%;
-
-   div.graph-container {
-      width: 100%;
-      height: 100%;
-      flex-grow: 1;
-
-      > div {
-         width: 100% !important;
-         height: 100% !important;
-      }
-   }
 
    div.node-info-bar,
    div.graph-controls-bar {
@@ -32,5 +23,33 @@ div.graphView {
       border-left: none;
       border-right: none;
       border-radius: 0;
+   }
+
+   div.main-view {
+      width: 100%;
+      height: 100%;
+      flex-grow: 1;
+      position: relative;
+      overflow: hidden;
+
+      div.graph-container {
+         width: 100%;
+         height: 100%;
+         position: relative;
+         z-index: 1;
+
+         > div {
+            width: 100% !important;
+            height: 100% !important;
+         }
+
+         transition: transform 400ms easing("standard"), opacity 400ms easing("standard");
+         opacity: 1;
+
+         &.isClosed {
+            transform: translateY(25%);
+            opacity: 0;
+         }
+      }
    }
 }
