Started Info Section
* Started Working on the Info section.

* Fixed a bug where the website would crash if the user passed a node name with no children in the graph query string.

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -43,3 +43,13 @@ div.App {
       }
    }
 }
+
+div.equation {
+   text-align: center;
+   margin-top: 24px;
+   font-size: 24px;
+
+   &.small {
+      font-size: 18px;
+   }
+}
