--- a/src/App/components/Header/Header.scss
+++ b/src/App/components/Header/Header.scss
@@ -2,37 +2,38 @@
    @media screen and (max-width: 1200px) {
       z-index: 1100 !important;
    }
-}
 
-button.menu-icon {
-   @media screen and (min-width: 1201px) {
-      display: none !important;
-   }
-}
-
-img.logo {
-   height: 36px;
-   margin-right: 16px;
-}
-
-div.app-name {
-   @media screen and (max-width: 500px) {
-      display: none;
-   }
-}
-
-div.right-buttons {
-   button {
-      margin-left: 8px;
-
-      &.no-mobile {
-         @media screen and (max-width: 400px) {
-            display: none;
-         }
+   button.menu-icon {
+      @media screen and (min-width: 1201px) {
+         display: none !important;
       }
    }
 
-   @media screen and (max-width: 500px) {
-      flex-grow: 1;
+   img.logo {
+      height: 36px;
+      margin-right: 16px;
+   }
+
+   div.app-name {
+      @media screen and (max-width: 500px) {
+         display: none;
+      }
+   }
+
+   div.right-buttons {
+      button,a {
+         margin-left: 8px;
+
+         &.no-mobile {
+            @media screen and (max-width: 400px) {
+               display: none;
+            }
+         }
+      }
+
+      @media screen and (max-width: 500px) {
+         flex-grow: 1;
+      }
    }
 }
+
