--- a/src/App/components/Header/Header.scss
+++ b/src/App/components/Header/Header.scss
@@ -15,13 +15,13 @@
    }
 
    div.app-name {
-      @media screen and (max-width: 500px) {
+      @media screen and (max-width: 530px) {
          display: none;
       }
    }
 
    div.right-buttons {
-      button,a {
+      button, a {
          margin-left: 8px;
 
          &.no-mobile {
@@ -29,10 +29,20 @@
                display: none;
             }
          }
+
+         &.no-desktop {
+            @media screen and (min-width: 401px) {
+               display: none;
+            }
+         }
       }
 
-      @media screen and (max-width: 500px) {
+      @media screen and (max-width: 530px) {
          flex-grow: 1;
+
+         button.change-theme span.current-theme-text {
+            display: none;
+         }
       }
    }
 }
